fix(title_actions): dark background in code affecting readability

--- a/apps/client/src/widgets/layout/InlineTitle.css
+++ b/apps/client/src/widgets/layout/InlineTitle.css
@@ -75,10 +75,6 @@
     }
 }
 
-.note-split.type-code:not(.mime-text-x-sqlite) .inline-title {
-    background-color: var(--main-background-color);
-}
-
 body.prefers-centered-content .inline-title {
     margin-inline: auto;
 }
